Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-15653

Alt+Tab switcher looks ignore WS_EX_APPWINDOW style

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.13
    • Win32SS
    • None

    Description

      In XP if i use

      SetWindowLong(Handle, GWL_EXSTYLE,GetWindowLong(Handle, GWL_EXSTYLE) xor WS_EX_APPWINDOW);

      then window with Handle show or hide from Alt+Tab list.
      ROS ignores the presence of the ws_ex_appwindow style and always show this window.

      Attachments

        1. AltTabList.zip
          27 kB
        2. Delphi_Alt-Tab.png
          Delphi_Alt-Tab.png
          83 kB
        3. form1.png
          form1.png
          40 kB
        4. form2-exclude.png
          form2-exclude.png
          37 kB
        5. form2-include.png
          form2-include.png
          37 kB
        6. is-it-virus.png
          is-it-virus.png
          66 kB
        7. test_xp.wmv
          430 kB
        8. Type1234.zip
          407 kB
        9. Type1234.zip
          407 kB
        10. Type1234-ScreenShots.zip
          342 kB
        11. Type1-before.png
          Type1-before.png
          26 kB
        12. Type1-win2k3.png
          Type1-win2k3.png
          26 kB
        13. Type2-before.png
          Type2-before.png
          34 kB
        14. Type2-win2k3.png
          Type2-win2k3.png
          35 kB
        15. Type3-before.png
          Type3-before.png
          23 kB
        16. Type3-win2k3.png
          Type3-win2k3.png
          32 kB
        17. Type4-before.png
          Type4-before.png
          29 kB
        18. Type4-win2k3.png
          Type4-win2k3.png
          34 kB
        19. ws_ex_appwindow.zip
          196 kB

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              amber amber
              Votes:
              4 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: