[USER32] Fix behavior of Task Switcher (Alt+Tab) (#1591)

Task Switcher didn't correctly behave on the windows with WS_EX_APPWINDOW extended style. CORE-15653